Compiler/tests/good/context5.nx
type small_int = [0 .. 4];

val x : small_int = 3;

printn(x);

if(1)
{
    printn(x);

    val x : int = 2;
    
    printn(x);

    type small_int = [0 .. 1];
    
    foreach i in small_int
    {
        printn(x);

        
        val x : int = 1;

        printn(x);
    }
    printn(x);
}

printn(x);

