Compiler/tests/bad/if1.nx
type t = [0 .. 10];

if(t)
{
    print(42);
}